Titles for slides

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -315,17 +315,18 @@
 Основні наукові результати, що отримані в дисертаційної роботі, полягають
 в наступному:
 
+\noindent
+вперше:
+
 \begin{itemize}
 
   \item
-  вперше
   створено критерії ідентифікації нелінійних динамічних систем,
   які, на відміну від тих, що існують, дозволяють оцінити їх стан та
   хаотичну динаміку, та дають підстави для створення ефективних алгоритмів
   настроювання параметрів моделей систем ідентифікації;
 
   \item
-  вперше
   створено методи адаптивно-пошукової ідентифікації на підставі
   адаптивно-пошукової парадигми з використанням ансамблю пошукових агентів,
   які взаємодіють проміж собою, які на відміну від методів, що використовують
@@ -335,28 +336,12 @@
   кількості моделей та забезпечують певні гарантії пошуку;
 
   \item
-  вперше
   створено нову класифікацію систем ідентифікації динамічних систем,
   яка як вбирає у себе методи, що існують, так і дозволяє
   створювати нові методи ідентифікації за рахунок
   комбінування їх складових частин;
 
   \item
-  набуло подальший розвиток
-  методи оцінювання якості ідентифікації,
-  які на відміну від тих, що існують,
-  враховують використання множини агентів;
-
-
-  \item
-  набули подальший розвиток
-  підходи до адаптації параметрів систем
-  адаптивно-пошукової ідентифікації, які придатні використовувати поточну
-  інформацію від ансамблю сінергированих моделей, та корегувати глобальні
-  параметри пошуку;
-
-  \item
-   вперше
    визначено, що системи з сухим тертям з точки зору задачі ідентифікації
    при певних  умовах функціонування
    мають властивості, що поєднують їх з системами хаотичної динаміки, тобто з
@@ -364,14 +349,6 @@
    умов та вид атрактору, що також потребує використання нових методів ідентифікації;
 
   \item
-    набула подальший розвиток
-    модель генератора Копітца, яка враховує
-    більшу кількість нелінійних ефектів,
-    що забезпечує більш адекватні результати процесу
-    ідентифікації її параметрів новими методами;
-
-  \item
-   вперше
    запропоновано модель системи хаотичної динаміки системи зв'язаних релаксаційних генераторів,
    яка відрізняєшся від існуючих відсутністю індуктивних компонентів,
    працездатністю при малих напругах та можливістю
@@ -380,6 +357,30 @@
    фізичного об'єкту, перевірки адекватності математичної моделі
    та властивостей системи ідентифікації стосовно цієї системи.
 
+
+\end{itemize}
+
+
+\noindent
+Набуло подальший розвиток:
+\begin{itemize}
+
+  \item
+  методи оцінювання якості ідентифікації,
+  які на відміну від тих, що існують,
+  враховують використання множини агентів;
+
+  \item
+  підходи до адаптації параметрів систем
+  адаптивно-пошукової ідентифікації, які придатні використовувати поточну
+  інформацію від ансамблю сінергированих моделей, та корегувати глобальні
+  параметри пошуку;
+
+  \item
+    модель генератора Копітца, яка враховує
+    більшу кількість нелінійних ефектів,
+    що забезпечує більш адекватні результати процесу
+    ідентифікації її параметрів новими методами;
 
 \end{itemize}
 
@@ -625,7 +626,7 @@ BJT транзистора, та різних режимів роботи.
   створено новий клас систем ідентификації у межах
     адаптивно-пошуковой парадигми,
     які за рахунок використання колективної динаміки
-    анфамблю пошукових агентів забезаечують
+    ансамблю пошукових агентів забезпечують
     кращу якість ідентифицації;
 
   \item
