--- a/pres/pres_atu.tex
+++ b/pres/pres_atu.tex
@@ -41,6 +41,10 @@
 
     \vfill
 
+    Научный консультант -- д.т.н., проф. \superRu
+
+    \vfill
+
     Днепр -- 2017
   \end{center}
 \end{frame}
@@ -50,6 +54,33 @@
 \begin{frame}
   \frametitle{Актуальность}
   %\framesubtitle{}
+
+  Актуальность обусловлена следующими фактами:
+
+  \begin{itemize}
+
+    \item
+      Нелинейные динамические системы, представленные в современных
+      технологических процессах, природных явлениях, зачастую
+      демонстрируют хаотическое поведение.
+      Основная причина -- малые возмущения параметров или входных сигналов
+      приводят к существенным изменениям выходного сигнала.
+
+    \item
+      Существующие методы идентификации или принципиально непригодны для
+      работы с хаотическими системами, или же требуют выполнения
+      достаточно жёстких условий.
+
+    \item
+      Существуют динамические системы, не обладающие строгими свойствами хаотичности,
+      но имеющие с ними общие свойства с точки зрения идентификации.
+
+    \item
+      Свойства существующих методов идентификации нелинейных динамических систем
+      ограничивают достижимое качество идентификации,
+      особенно применительно к хаотическим системам.
+
+  \end{itemize}
 
 
 \end{frame}
@@ -62,19 +93,23 @@
   %\framesubtitle{}
 
 \textbf{Объект исследования} ---
-системы адаптивно-поисковой идентификации систем хаотической динамики.
+технические системы, которые в процессе функционирования
+могут входить в хаотический режим.
 
-\smallskip
+\medskip
 
 \textbf{Предмет исследования} ---
-математические модели систем адаптивно-поисковой идентификации систем хаотической динамики.
+математические модели процессов и методы
+адаптивно-поисковой идентификации технических систем с хаотической динамикой.
 
-\smallskip
+\medskip
 
 \textbf{Методы исследования} ---
 математический аппарат теории управления и идентификации,
-вычислительные методы,
-теория информации
+динамического хаоса,
+нечёткой логики,
+теории информации,
+вычислительные методы
 \ldots
 
 \end{frame}
@@ -84,7 +119,85 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Задачи исследования}
+  %\framesubtitle{}
+
+  \begin{itemize}
+
+    \item
+      Разработать новые критерии идентификации, которые, в отличие от существующих,
+      при моделировании были бы пригодны для анализа состояния и динамики хаотических
+      систем, что создаст основу для создания работоспособных систем идентификации.
+
+    \item
+      Развить существующие и разработать новые методы поиска, которые в полной мере
+      использовали преимущества использования ансамбля поисковых агентов.
+
+    \item
+      Разработать новые и развить существующие и  методы настройки параметров системы
+      идентификации, способные приспособиться к смене режимов работы системы.
+
+    \item
+      Разработать программное обеспечение, пригодное для моделирования как систем
+      хаотической динамики, так и систем идентификации.
+
+    \item
+      Провести компьютерное моделирование процессов идентификации систем хаотической
+      динамики и исследовать их работоспособность, возможности и характеристики.
+
+  \end{itemize}
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Прототипы}
+  %\framesubtitle{}
+
+  Кто занимался и какие методы.
+
+
+\end{frame}
+
+
+
+
+
+
+
+% -------------------------- P2 ---------------------------------------------
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Необходимость новых критериев}
+  \framesubtitle{Влияние малых возмущений}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Определения идентификации}
+  %\framesubtitle{}
+
+  Заде -- Райбман, \ldots
+
+
+\end{frame}
+
+% -----------------------------------------------------------------------
+
+
+\begin{frame}
+  \frametitle{Критерии идентификации: требования}
   %\framesubtitle{}
 
 
@@ -95,7 +208,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Критерии идентификации: энергетические основы}
   %\framesubtitle{}
 
 
@@ -106,7 +219,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Критерии идентификации: предлагаемый набор величин}
   %\framesubtitle{}
 
 
@@ -117,7 +230,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Отличие задачи идентификации}
   %\framesubtitle{}
 
 
@@ -128,7 +241,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Динамические характеристики критериев}
   %\framesubtitle{}
 
 
@@ -139,7 +252,30 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Выводы?}
+  %\framesubtitle{}
+
+
+\end{frame}
+
+
+
+% --------------------------- P3 --------------------------------------------
+
+
+
+\begin{frame}
+  \frametitle{Безразмерный вид критерия и функции качества}
+  %\framesubtitle{}
+
+
+\end{frame}
+
+% -----------------------------------------------------------------------
+
+
+\begin{frame}
+  \frametitle{Элементы системы идентификации: определения}
   %\framesubtitle{}
 
 
@@ -150,7 +286,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Плоская структура мультиагентной системы}
   %\framesubtitle{}
 
 
@@ -161,7 +297,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Виды мультиагентных систем идентификации}
   %\framesubtitle{}
 
 
@@ -172,7 +308,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Виды и задачи поисковых агентов}
   %\framesubtitle{}
 
 
@@ -183,7 +319,29 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Методы агентов, использующих значения критерия}
+  %\framesubtitle{}
+
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Методы агентов, использующих значения функции качества}
+  %\framesubtitle{}
+
+
+\end{frame}
+
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Методы, параметры и алгоритмы работы поисковых координаторов }
   %\framesubtitle{}
 
 
@@ -194,7 +352,46 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Ошибки и качество идентификации}
+  %\framesubtitle{}
+
+
+\end{frame}
+
+
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Классификация и обозначения систем идентификации}
+  %\framesubtitle{}
+
+
+\end{frame}
+
+
+
+
+
+% ------------------------------- P4 ----------------------------------------
+
+\begin{frame}
+  \frametitle{Система моделирования ``qontrol''}
+  %\framesubtitle{}
+
+  Задачи системы
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Основные особенности программы ``qontrol''}
   %\framesubtitle{}
 
 
@@ -205,7 +402,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Интерфейс программы ``qontrol''}
   %\framesubtitle{}
 
 
@@ -216,7 +413,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Программно-аппаратная реализация взаимодействия с физическими объектами}
   %\framesubtitle{}
 
 
@@ -227,7 +424,382 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Программно-аппаратная реализация }
+  \framesubtitle{Оборудование}
+
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Программно-аппаратная реализация }
+  \framesubtitle{Интерфейс}
+
+
+\end{frame}
+
+
+
+% ----------------------------- P5 ------------------------------------------
+
+% --- lor ---
+\begin{frame}
+  \frametitle{Система Лоренца}
+  \framesubtitle{Определение}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Лоренца}
+  \frametitle{Свойства}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Лоренца}
+  \framesubtitle{Анализ критериев}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Лоренца}
+  \framesubtitle{Тестовая задача}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Лоренца}
+  \framesubtitle{Идентификация методом  Fblvd1.2.$q_{x2}$ }
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Лоренца}
+  \framesubtitle{Идентификация методом qAuv5.3r.$q_{x2}$}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Лоренца}
+  \framesubtitle{Идентификация методом FAlv5.3z.$q_{x2}$}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Лоренца}
+  \framesubtitle{Зависимости $\overline{e}(a_q)$}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Лоренца}
+  \framesubtitle{Зависимости $\overline{e}(q_\gamma)$}
+
+
+\end{frame}
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Лоренца}
+  \framesubtitle{Зависимости $\overline{e}(v_f)$}
+
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Лоренца}
+  \framesubtitle{Влияние вида функции качества на процесс идентификации}
+
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Лоренца}
+  \framesubtitle{Влияние количества поисковых агентов на процесс идентификации}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+% ---- spr_a ----
+\begin{frame}
+  \frametitle{Система Sprott A}
+  \framesubtitle{Определение}
+
+
+\end{frame}
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Sprott A}
+  \framesubtitle{Свойства}
+
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Sprott A}
+  \framesubtitle{Идентификация методом qAuv5.3r.$q_{x2}$}
+
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Sprott A}
+  \framesubtitle{Идентификация методом FAlv5.3z.$q_{x2}$}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Sprott A}
+  \framesubtitle{Зависимости $\overline{e}(a_q)$}
+
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Sprott A}
+  \framesubtitle{Зависимости $\overline{e}(q_\gamma)$}
+
+
+\end{frame}
+
+% --- chua ---
+\begin{frame}
+  \frametitle{Система Чуа}
+  \framesubtitle{Определение}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Чуа}
+  \frametitle{Свойства}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Чуа}
+  \framesubtitle{Анализ критериев}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Чуа}
+  \framesubtitle{Тестовая задача}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Чуа}
+  \framesubtitle{Идентификация методом  Fblvd1.2.$q_{x2}$ }
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Чуа}
+  \framesubtitle{Идентификация методом qAuv5.3r.$q_{x2}$}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Чуа}
+  \framesubtitle{Идентификация методом FAlv5.3z.$q_{x2}$}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Чуа}
+  \framesubtitle{Зависимости $\overline{e}(a_q)$}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Чуа}
+  \framesubtitle{Зависимости $\overline{e}(q_\gamma)$}
+
+
+\end{frame}
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Чуа}
+  \framesubtitle{Зависимости $\overline{e}(v_f)$}
+
+
+\end{frame}
+
+
+% -- fric ---
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система с сухим трением}
+  \framesubtitle{Определение}
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система с сухим трением}
+  \framesubtitle{Свойства}
+
+\end{frame}
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система с сухим трением}
+  \framesubtitle{Определение критерия}
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система с сухим трением}
+  \framesubtitle{Процесс идентификации}
+
+\end{frame}
+
+
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Другие рассмотренные хаотические системы}
+  %\framesubtitle{}
+
+  Были расмотрены системы Дуффинга, Рёсслера, Ван-дер-Поля,
+  еолебательная система с нечувствительностью в возвращающей силе.
+
+  Для всех этих систем на основе предложенных критериев были
+  созданы системы идентификации, показана их работоспособность
+  и определены зависимости ошибок идентификации от параметров поисковой системы.
+
+
+\end{frame}
+
+
+
+
+% ----------------------------- P6 ------------------------------------------
+
+\begin{frame}
+  \frametitle{Система Колпитца}
   %\framesubtitle{}
 
 
@@ -238,7 +810,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Система Колпитца}
   %\framesubtitle{}
 
 
@@ -249,7 +821,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Система Колпитца}
   %\framesubtitle{}
 
 
@@ -260,7 +832,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Система Колпитца}
   %\framesubtitle{}
 
 
@@ -271,7 +843,18 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Система Колпитца}
+  %\framesubtitle{}
+
+
+\end{frame}
+
+
+
+% ------------------ P7 -----------------------------------------------------
+
+\begin{frame}
+  \frametitle{Система связанных релаксационных генераторов}
   %\framesubtitle{}
 
 
@@ -282,7 +865,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Система связанных релаксационных генераторов}
   %\framesubtitle{}
 
 
@@ -293,7 +876,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Система связанных релаксационных генераторов}
   %\framesubtitle{}
 
 
@@ -304,7 +887,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Система связанных релаксационных генераторов}
   %\framesubtitle{}
 
 
@@ -315,7 +898,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Система связанных релаксационных генераторов}
   %\framesubtitle{}
 
 
@@ -323,154 +906,103 @@
 
 
 
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{}
-  %\framesubtitle{}
-
-
-\end{frame}
-
-
-
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{}
-  %\framesubtitle{}
-
-
-\end{frame}
-
-
-
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{}
-  %\framesubtitle{}
-
-
-\end{frame}
-
-
-
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{}
-  %\framesubtitle{}
-
-
-\end{frame}
-
-
-
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{}
-  %\framesubtitle{}
-
-
-\end{frame}
-
-
-
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{}
-  %\framesubtitle{}
-
-
-\end{frame}
-
-
-
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{}
-  %\framesubtitle{}
-
-
-\end{frame}
-
-
-
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{}
-  %\framesubtitle{}
-
-
-\end{frame}
-
-
-
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{}
-  %\framesubtitle{}
-
-
-\end{frame}
-
-
-
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{}
-  %\framesubtitle{}
-
-
-\end{frame}
-
-
-
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{}
-  %\framesubtitle{}
-
-
-\end{frame}
-
-
-
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{}
-  %\framesubtitle{}
-
-
-\end{frame}
-
-
-
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{}
-  %\framesubtitle{}
-
-
-\end{frame}
-
-
-
-% -----------------------------------------------------------------------
+% ----------------------------- FINAL ------------------------------------------
 
 \begin{frame}
   \frametitle{Научная новизна}
   %\framesubtitle{}
+
+  \noindent
+  Впервые:
+
+  \begin{itemize}
+
+    \item
+      Предложены \textbf{критерии} идентификации нелинейных динамических систем, которые, в
+      отличие от существующих, позволяют оценить их состояние и хаотическую динамику,
+      и дают основания для создания эффективных алгоритмов настройки параметров
+      моделей систем идентификации.
+
+    \item
+      Созданы \textbf{методы} адаптивно-поисковой идентификации на основании
+      адаптивно-поисковой парадигмы с использованием \textbf{ансамбля взаимодействующих поисковых агентов},
+      и, в отличие от методов, которые
+      используют одну модель или пару моделей, значительно повышают скорость поиска и
+      способны за минимальное время перестреливаться при резкой смене параметра, а в
+      отличие от роевых алгоритмов, новые методы требуют значительно меньшего
+      количества моделей и обеспечивают определенные гарантии поиска.
+
+    \item
+      Создана новая \textbf{классификация} систем идентификации динамических систем, которая
+      как включает в себя как существующие методы, так и позволяет создавать новые методы
+      идентификации за счет комбинирования их составных частей.
+
+  \end{itemize}
+
+
+\end{frame}
+
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Научная новизна (2)}
+  %\framesubtitle{}
+
+  \begin{itemize}
+
+    \item
+      Установлено, что системы с \textbf{сухим трением} с точки зрения задачи идентификации при
+      определенных условиях функционирования обладают свойствами, которые объединяют их с
+      системами хаотической динамики, а именно:
+      существенная зависимость от начальных условий и вид аттракторов, что
+      также требует использования новых методов идентификации.
+
+    \item
+      Предложена модель системы хаотической динамики системы
+      \textbf{связанных релаксационных генераторов},
+      которая отличаешься от существующих отсутствием индуктивных
+      компонентов, работоспособностью при малых напряжениях и возможностью управления
+      частотным диапазоном в широком диапазоне, что способствует процессу анализа
+      хаотической динамики физического объекта, проверки адекватности математической
+      модели и свойств системы идентификации на этой системе.
+
+  \end{itemize}
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Научная новизна (3)}
+  %\framesubtitle{}
+
+\noindent
+Получили дальнейшее развитие:
+
+  \begin{itemize}
+
+    \item
+      \textbf{Методы оценки качества идентификации},
+      которые в отличие от существующих,
+      учитывают использование множества агентов.
+
+    \item
+      \textbf{Подходы к адаптации параметров}
+      систем адаптивно-поисковой идентификации,
+      которые пригодны использовать информацию от ансамбля синергированих моделей, и
+      корректировать глобальные параметры поиска.
+
+    \item
+      Модель \textbf{генератора Копитца}, учитывающей большее количество нелинейных эффектов,
+      что обеспечивает более адекватные результаты процесса идентификации ее
+      параметров новыми методами.
+
+  \end{itemize}
 
 
 \end{frame}
@@ -482,6 +1014,24 @@
 \begin{frame}
   \frametitle{Практическая ценность}
   %\framesubtitle{}
+
+  \begin{itemize}
+
+    \item
+      Разработанные методы идентификации были использованы при проектировании,
+      создании, настройке параметров стенда исследования вибрационного и
+      акустического воздействия. Анализ результатов данных по этому стенду дал
+      возможность указать нужные нелинейные свойства системы, и диапазон параметров,
+      в совокупности обеспечивают широкополосный спектр колебаний.
+
+    \item
+      Созданное программное среда для моделирования нелинейных динамических систем
+      используется при проведении практических работ по дисциплинам
+      ``Моделирование систем'', ``Современные системы управления''
+      на кафедре информационных технологий
+      и систем Национальной металлургической академии Украины.
+
+  \end{itemize}
 
 
 \end{frame}
@@ -528,6 +1078,28 @@
 \begin{frame}
   \frametitle{Выводы 1}
   %\framesubtitle{}
+
+  \begin{itemize}
+
+    \item
+      Созданы новые критерии идентификации,
+      пригодные для анализа состояния и динамики хаотических систем, что создаёт
+      физическое  обоснование для создания работоспособных систем идентификации.
+
+    \item
+      Создан новый класс систем идентификации в рамках адаптивно-поисковом парадигмы,
+      которые за счет использования коллективной динамики ансамбля поисковых
+      агентов обеспечивают лучшее качество идентифицации.
+
+    \item
+      Создано программное обеспечение, пригодное для моделирования как систем
+      хаотической динамики, так и систем мультиагентной идентификации.
+
+    \item
+      Проведено компьютерное моделирование процессов идентификации систем хаотической
+      динамики, подтверждено их работоспособность.
+
+  \end{itemize}
 
 
 \end{frame}
